test/functions/fcf/ErrorArray.good
ErrorArray.chpl:2: error: anonymous proc is generic and cannot be captured
ErrorArray.chpl:2: note: the formal 'x' is generic because '_array' is an array, which is considered generic due to runtime type information
ErrorArray.chpl:5: warning: proc
